--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clover Bot</title>
-    <!-- Correct path to the CSS file -->
     <link rel="stylesheet" href="static/styles.css" />
   </head>
   <body>
     <div class="header">
-      <!-- Correct path to the banner image -->
       <img src="static/buttons/banner.png" alt="Robot Banner" />
     </div>
     <div class="grid-wrapper">
@@ -42,7 +42,6 @@
         </button>
       </div>
     </div>
-    <!-- Link js -->
     <script src="static/script.js"></script>
   </body>
 </html>
